--- a/demo/boda-ui/assets/scss/1-abstracts/_variables.scss
+++ b/demo/boda-ui/assets/scss/1-abstracts/_variables.scss
@@ -18,7 +18,7 @@ $bg-colors: (
 );
 
 //------------------------------- Typography
-$nudista-font-family: "nudista-web", sans-serif;
+$nudista-font-family: 'Noto Sans Hebrew', sans-serif;
 $roboto-font-family: "Roboto", sans-serif;
 
 $font-thin: 100; //  Hairline
