--- a/demo/boda-ui/assets/scss/3-components/_wizard.scss
+++ b/demo/boda-ui/assets/scss/3-components/_wizard.scss
@@ -8,6 +8,7 @@
     p{
       margin-bottom: 6px;
       font-size: 10px;
+      font-weight: 400;
       line-height: 1.5em;
       color: #636363;
     }
