--- a/demo/boda-ui/assets/scss/6-pages/_done.scss
+++ b/demo/boda-ui/assets/scss/6-pages/_done.scss
@@ -1,4 +1,3 @@
-
 .done-content {
   padding-top: 30px;
   .done-inner-content {
@@ -16,12 +15,22 @@
     h4 {
       font-size: 16px;
       font-weight: 400;
-      padding: 0 10px;
+      padding: 0 45px;
       margin-bottom: 20px;
     }
     p {
       font-size: 16px;
       font-weight: 700;
+      position: relative;
+      &:before {
+        content: "";
+        background: url("../images/icons/glass.svg") no-repeat 0 0;
+        width: 37px;
+        height: 38px;
+        position: absolute;
+        top: -35px;
+        left: 1px;
+      }
     }
   }
   .done-section-buttons {
@@ -40,7 +49,7 @@
       text-align: center;
       font-size: 10px;
       line-height: 1.5em;
-      img{
+      img {
         display: block;
         margin: 0 auto 5px;
       }
