--- a/demo/boda-ui/assets/scss/6-pages/_index.scss
+++ b/demo/boda-ui/assets/scss/6-pages/_index.scss
@@ -2,5 +2,10 @@
 @import "reminder";
 @import "no-reminder";
 @import "declined";
-@import "place";
+@import "seating";
 @import "done";
+@import "calender";
+@import "venue";
+@import "summary";
+@import "done-reenter";
+@import "survey";
