--- a/demo/boda-ui/assets/scss/3-components/_index.scss
+++ b/demo/boda-ui/assets/scss/3-components/_index.scss
@@ -1,9 +1,13 @@
 // @import "boxes";
 // @import "buttons";
-// @import "carousel";
+@import "carousel";
 // @import "forms";
 // @import "lists";
 // @import "modals";
 // @import "tabs";
 @import "wizard";
 @import "drawer";
+@import "checkbox";
+@import "select-seat-warning";
+@import "add-guest-popup";
+@import "dish-warning-popup";
