--- a/demo/boda-ui/assets/scss/6-pages/_survey.scss
+++ b/demo/boda-ui/assets/scss/6-pages/_survey.scss
@@ -15,7 +15,7 @@
 }
 
 .survey-content {
-  padding: 15px 0 12px;
+  padding: 15px 20px 12px;
   .survey-content-top {
     padding-bottom: 30px;
     h2 {
@@ -48,6 +48,7 @@
           justify-content: space-around;
           padding-top: 16px;
           padding-bottom: 5px;
+          flex-direction: row-reverse;
           button {
             border: none;
             outline: none;
@@ -98,6 +99,13 @@
       font-size: 16px;
       font-weight: 400;
       line-height: 1.5em;
+      a {
+        color: #ffffff;
+        text-decoration: none;
+        &:hover {
+          color: #ffffff;
+        }
+      }
       &::after {
         content: "";
         position: absolute;
@@ -108,6 +116,63 @@
         top: 50%;
         transform: translateY(-50%);
       }
+    }
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .overlay:target {
+    visibility: visible;
+    opacity: 1;
+  }
+  .popup {
+    padding: 22px 14px;
+    background: #fff;
+    border-radius: 5px;
+    width: 224px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    h2 {
+      font-size: 18px;
+      font-weight: 700;
+      margin-bottom: 10px;
+      color: #842c86;
+      line-height: 27px;
+    }
+    p {
+      font-size: 14px;
+      font-weight: 400;
+      color: #636363;
+      margin-bottom: 18px;
+      line-height: 21px;
+    }
+    img {
+      display: block;
+      margin: 0 auto;
+      width: 72px;
+      height: 83px;
+      margin-bottom: 18px;
+    }
+    a {
+      font-size: 12px;
+      font-weight: 400;
+      color: #636363;
+      text-align: center;
+    }
+    div {
+      text-align: center;
     }
   }
 }
