--- a/demo/boda-ui/assets/scss/6-pages/_venue.scss
+++ b/demo/boda-ui/assets/scss/6-pages/_venue.scss
@@ -46,13 +46,13 @@
   }
 }
 
-.venue-maps {
+.venue-area {
   padding: 10px 0;
   .gmap_canvas {
     text-align: center;
     overflow: hidden;
     background: none !important;
-    height: 500px;
+    height: 206px;
     width: 100%;
   }
   #gmap_canvas {
@@ -61,11 +61,34 @@
   .mapouter {
     position: relative;
     text-align: right;
-    height: 500px;
     width: 100%;
   }
   .gallery-image {
     text-align: center;
     margin-top: 50px;
+  }
+
+  .venue-gallery {
+    padding: 25px 0 8px;
+    text-align: center;
+
+    h2 {
+      font-size: 16px;
+      font-weight: 700;
+    }
+    h3 {
+      font-size: 14px;
+      font-weight: 400;
+      margin-bottom: 36px;
+    }
+  }
+}
+
+.venue-discription {
+  padding-top: 25px;
+  text-align: center;
+  p {
+    font-size: 14px;
+    font-weight: 400;
   }
 }
